--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
   </header>
 
   <main role="main" class="inner cover">
-    <h1 class="cover-heading">On the 8th Full Moon...</h1>
-    <p class="lead">Magic is waiting for you.<br>All you have to do is say yes.</p>
+    <h1 class="cover-heading">Love is infinite.</h1>
+    <p class="lead">August 1, 2020<br>Asheville, North Carolina</p>
   </main>
 
   <footer class="mastfoot mt-auto">
