--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <main role="main" class="inner cover">
     <h1 class="cover-heading">Love is infinite.</h1>
-    <p class="lead">August 1, 2020<br>Asheville, North Carolina</p>
+    <p class="lead"><del>August 1, 2020</del> Summer 2021<br>Asheville, North Carolina</p>
   </main>
 
   <footer class="mastfoot mt-auto">
