First draft of new site.

--- a/index.html
+++ b/index.html
@@ -1,78 +1,134 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Joshua Ginsberg and Jennifer Nicolaisen">
-    <title>8thfullmoon.com - Joshua Ginsberg and Jennifer Nicoliasen</title>
 
-    <link rel="canonical" href="https://8thfullmoon.com/">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Joshua Ginsberg and Jennifer Nicolaisen">
+  <title>8thfullmoon.com - Joshua Ginsberg and Jennifer Nicoliasen</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Allura|Karla&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://8thfullmoon.com/">
+
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Allura|Cardo&display=swap" rel="stylesheet">
 
 
 
-    <style>
-      body { 
-       background: url(assets/img/cover.jpg) no-repeat center center fixed; 
-       -webkit-background-size: cover;
-       -moz-background-size: cover;
-       -o-background-size: cover;
-       background-size: cover;
-       font-family: Karla, sans;
-      }
+  <style>
+    body {
+      font-family: Cardo, Garamond serif;
+      font-size: 12pt;
+      background-color: #384249;
+    }
 
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
+    header {
+      color: #ececec;
+      text-transform: uppercase;
+      background: url(./assets/img/flourish.png) bottom center no-repeat;
+      padding-bottom: 54px;
+    }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+    header a {
+      color: #ececec;
+      text-decoration: underline;
+    }
 
-      main.cover {
-        font-family: 'Allura', cursive;
-      }
-      main.cover > h1.cover-heading {
-        font-size: 4em;
-      }
-      main.cover > p.lead {
-        font-size: 2em;
-      }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="assets/css/cover.css" rel="stylesheet">
-  </head>
-  <body class="text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="masthead mb-auto">
-    <div class="inner">
-      <h3 class="masthead-brand">Joshua &amp; Jennifer</h3>
-      <nav class="nav nav-masthead justify-content-center">
-        <a class="nav-link active" href="#">Home</a>
-        <a class="nav-link" href="mailto:8thfullmoon@gmail.com">Contact</a>
-      </nav>
-    </div>
-  </header>
+    #hero {
+      font-family: 'Allura', cursive;
+      color: #ececec;
+      width: 100%;
+      height: 100vh;
+      background: url(./assets/img/cover.jpg) top center no-repeat;
+      background-size: cover;
+      position: relative;
+    }
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Love is infinite.</h1>
-    <p class="lead"><del>August 1, 2020</del> Summer 2021<br>Asheville, North Carolina</p>
-  </main>
+    #hero>.container>h1{
+      font-size: 4rem;
+    }
 
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-    </div>
-  </footer>
-</div>
+    #hero>.container>p.lead {
+      font-size: 2em;
+    }
+
+    #main-content > .row {
+      background-color: #ececec;
+      color: #384249;
+      line-height: 2rem;
+    }
+
+    #main-content > .row h2, #main-content > .row h3, #main-content > .row p, #main-content > .row iframe {
+      margin-bottom: 2rem;
+    }
+
+    #main-content > .row a {
+      color: #384249;
+      text-decoration: underline;
+    }
+
+    hr {
+      display: block;
+      border: 0;
+      height: 72px;
+      background: url(./assets/img/flourish-green.png) top center no-repeat;
+    }
+
+  </style>
+</head>
+
+<body>
+  <div class="cover-container d-flex w-100 h-100 p-0 mx-0 flex-column">
+    <header class="pt-1 mb-auto text-center">
+      <div class="inner">
+        <h3 class="masthead-brand">Joshua &amp; Jennifer</h3>
+      </div>
+    </header>
+
+    <main role="main" class="inner">
+      <section id="hero" class="d-flex align-top text-center">
+        <div class="container mt-3 pt-3">
+          <h1>Love is infinite.</h1>
+          <p class="lead">August 28, 2021<br>Bolivia, North Carolina</p> 
+        </div>
+      </section>
+      <div class="container-fluid" id="main-content">
+        <div class="row m-3 p-5">
+          <div class="col-12">
+            <h2>At last.</h2>
+            <p>Our plans for 2020 were dashed. But love was never cancelled, and so we're back.</p>
+            <hr>
+            <p>For your convenience, <a href="https://www.google.com/maps/d/u/3/edit?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo&usp=sharing">this Google map</a> has all of the locations described below on it.</p>
+            <iframe src="https://www.google.com/maps/d/u/3/embed?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo" width="640" height="480"></iframe>
+            <h2>Ceremony and Reception</h2>
+
+            <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>.</p>
+            <p>Ceremony details to come.</p>
+            <hr>
+
+            <h2>Gift Registry</h2>
+            <p>As we are also trying to purchase and move into our first house together, we are asking for cash contributions toward that purpose. You can make your gift at our <a href="https://www.honeyfund.com/wedding/nicolaisen-ginsberg-08-28-2021">HoneyBook</a>. Thank you so much!</p>
+            <hr>
+            <h2>Travel Arrangements</h2>
+
+            <h5>Air Travel</h5>
+            <p>The closest commercial airport is in <b>Wilmington, North Carolina (ILM)</b>. It features routes to and from Washington-Dulles on United; Charlotte and Dallas on American; and Atlanta on Delta.</p>
+            <p>Please plan to rent a car. There are not public transportation options, and car hire services like Uber/Lyft do not reliably operate in the area.</p>
+
+            <h5>Lodging Options</h5>
+            <p>The best positioned hotel option is the <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/bolivia/sptex/hoteldetail">Holiday Inn Express & Suites</a> near Southport, NC. It is a short drive to the venue as well as to the Nicolaisen family home.</p>
+            <p>There are a number of beautiful boutique hotels and AirBnb options in Southport and Oak Island as well.</p>
+            <p>The closest Marriott branded hotel is the <a href="">Fairfield Inn</a> in Southport, and the closest Hilton branded hotel is the <a href="">Hampton Inn & Suites near Southport</a>.</p>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+      </div>
+    </footer>
+  </div>
 </body>
+
 </html>
