Better responsive spacing.

--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
         </div>
       </section>
       <div class="container-fluid" id="main-content">
-        <div class="row m-3 p-5">
+        <div class="row m-xs-1 m-md-3 p-xs-1 p-md-5">
           <div class="col-12">
             <h2>At last.</h2>
             <p>Our plans for 2020 were dashed. But love was never cancelled, and so we're back.</p>
             <hr>
             <p>For your convenience, <a href="https://www.google.com/maps/d/u/3/edit?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo&usp=sharing">this Google map</a> has all of the locations described below on it.</p>
-            <iframe src="https://www.google.com/maps/d/u/3/embed?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo" width="640" height="480"></iframe>
+            <iframe class="d-none d-md-block" src="https://www.google.com/maps/d/u/3/embed?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo" width="640" height="480"></iframe>
             <h2>Ceremony and Reception</h2>
 
             <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>.</p>
