Fix hotel links.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <h5>Lodging Options</h5>
             <p>The best positioned hotel option is the <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/bolivia/sptex/hoteldetail">Holiday Inn Express & Suites</a> near Southport, NC. It is a short drive to the venue as well as to the Nicolaisen family home.</p>
             <p>There are a number of beautiful boutique hotels and AirBnb options in Southport and Oak Island as well.</p>
-            <p>The closest Marriott branded hotel is the <a href="">Fairfield Inn</a> in Southport, and the closest Hilton branded hotel is the <a href="">Hampton Inn & Suites near Southport</a>.</p>
+            <p>The closest Marriott branded hotel is the <a href="https://www.marriott.com/hotels/travel/ilmfs-fairfield-inn-and-suites-southport/">Fairfield Inn</a> in Southport, and the closest Hilton branded hotel is the <a href="https://www.hilton.com/en/hotels/ilmsphx-hampton-suites-southport/">Hampton Inn & Suites</a> near Southport.</p>
           </div>
         </div>
       </div>
