--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://8thfullmoon.com/">
 
   <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Allura|Cardo&display=swap" rel="stylesheet">
 
 
@@ -93,7 +93,7 @@
         </div>
       </section>
       <div class="container-fluid" id="main-content">
-        <div class="row m-xs-1 m-md-3 p-xs-1 p-md-5">
+        <div class="row m-md-3 mt-s-3 p-md-5">
           <div class="col-12">
             <h2>At last.</h2>
             <p>Our plans for 2020 were dashed. But love was never cancelled, and so we're back.</p>
@@ -102,7 +102,8 @@
             <iframe class="d-none d-md-block" src="https://www.google.com/maps/d/u/3/embed?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo" width="640" height="480"></iframe>
             <h2>Ceremony and Reception</h2>
 
-            <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>.</p>
+            <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail d-none d-md-inline">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>.</p>
+            <address><a href="https://goo.gl/maps/yYgeytaYoXn35Dgk7">668 Midway Road SE<br>Bolivia, NC 28422</a></address>
             <p>Ceremony details to come.</p>
             <hr>
 
