--- a/index.html
+++ b/index.html
@@ -101,10 +101,21 @@
             <p>For your convenience, <a href="https://www.google.com/maps/d/u/3/edit?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo&usp=sharing">this Google map</a> has all of the locations described below on it.</p>
             <iframe class="d-none d-md-block" src="https://www.google.com/maps/d/u/3/embed?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo" width="640" height="480"></iframe>
             <h2>Ceremony and Reception</h2>
+            <div class="row mb-5">
+              <div class="col-12">
+                <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail d-none d-md-inline">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a> at <b>4:00 pm</b>.</p>
+                <address><a href="https://goo.gl/maps/yYgeytaYoXn35Dgk7">668 Midway Road SE<br>Bolivia, NC 28422</a></address>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <ul>
+                  <li><b>The ceremony begins at 4:00pm</b>, and we expect the reception to wind down around 10:00pm.</li>
+                  <li>We kindly request <b>semi-formal dress</b>. Parts of the evening will be outside in the grass, so traditional heels may be uncomfortable.</li>
 
-            <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail d-none d-md-inline">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>.</p>
-            <address><a href="https://goo.gl/maps/yYgeytaYoXn35Dgk7">668 Midway Road SE<br>Bolivia, NC 28422</a></address>
-            <p>Ceremony details to come.</p>
+                </ul>
+              </div>
+            </div>
             <hr>
 
             <h2>Gift Registry</h2>
@@ -118,8 +129,8 @@
 
             <h5>Lodging Options</h5>
             <p>The best positioned hotel option is the <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/bolivia/sptex/hoteldetail">Holiday Inn Express & Suites</a> near Southport, NC. It is a short drive to the venue as well as to the Nicolaisen family home.</p>
-            <p>There are a number of beautiful boutique hotels and AirBnb options in Southport and Oak Island as well.</p>
             <p>The closest Marriott branded hotel is the <a href="https://www.marriott.com/hotels/travel/ilmfs-fairfield-inn-and-suites-southport/">Fairfield Inn</a> in Southport, and the closest Hilton branded hotel is the <a href="https://www.hilton.com/en/hotels/ilmsphx-hampton-suites-southport/">Hampton Inn & Suites</a> near Southport.</p>
+            <p>There are a number of beautiful boutique hotels and AirBnb options in Southport and Oak Island as well.</p>
           </div>
         </div>
       </div>
