--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="container-fluid" id="main-content">
         <div class="row m-md-3 mt-s-3 p-md-5">
           <div class="col-12">
-            <h2>At last.</h2>
+            <h2 class="pt-4">At last.</h2>
             <p>Our plans for 2020 were dashed. But love was never cancelled, and so we're back.</p>
             <hr>
             <p>For your convenience, <a href="https://www.google.com/maps/d/u/3/edit?mid=1977Hhm4AR6LCgZfBRD1LUuVWiu6lRRFo&usp=sharing">this Google map</a> has all of the locations described below on it.</p>
@@ -111,8 +111,7 @@
               <div class="col-12">
                 <ul>
                   <li><b>The ceremony begins at 4:00pm</b>, and we expect the reception to wind down around 10:00pm.</li>
-                  <li>We kindly request <b>semi-formal dress</b>. Parts of the evening will be outside in the grass, so traditional heels may be uncomfortable.</li>
-
+                  <li>We kindly request <b>semi-formal dress</b>. While the ceremony will be outdoors on grass, the reception will be indoors; we will offer flip-flops for ladies who wear high heels.</li>
                 </ul>
               </div>
             </div>
@@ -124,13 +123,13 @@
             <h2>Travel Arrangements</h2>
 
             <h5>Air Travel</h5>
-            <p>The closest commercial airport is in <b>Wilmington, North Carolina (ILM)</b>. It features routes to and from Washington-Dulles on United; Charlotte and Dallas on American; and Atlanta on Delta.</p>
+            <p>The closest commercial airport is in <b>Wilmington, North Carolina (ILM)</b>. It features routes to and from Washington-Dulles on United; Charlotte and Dallas on American; and Atlanta on Delta. Secondarily, <b>Myrtle Beach, SC (MYR)</b> is also within reasonable driving proximity.</p>
             <p>Please plan to rent a car. There are not public transportation options, and car hire services like Uber/Lyft do not reliably operate in the area.</p>
 
             <h5>Lodging Options</h5>
             <p>The best positioned hotel option is the <a href="https://www.ihg.com/holidayinnexpress/hotels/us/en/bolivia/sptex/hoteldetail">Holiday Inn Express & Suites</a> near Southport, NC. It is a short drive to the venue as well as to the Nicolaisen family home.</p>
-            <p>The closest Marriott branded hotel is the <a href="https://www.marriott.com/hotels/travel/ilmfs-fairfield-inn-and-suites-southport/">Fairfield Inn</a> in Southport, and the closest Hilton branded hotel is the <a href="https://www.hilton.com/en/hotels/ilmsphx-hampton-suites-southport/">Hampton Inn & Suites</a> near Southport.</p>
-            <p>There are a number of beautiful boutique hotels and AirBnb options in Southport and Oak Island as well.</p>
+            <p>The closest Marriott-branded hotel is the <a href="https://www.marriott.com/hotels/travel/ilmfs-fairfield-inn-and-suites-southport/">Fairfield Inn</a> in Southport, and the closest Hilton-branded hotel is the <a href="https://www.hilton.com/en/hotels/ilmsphx-hampton-suites-southport/">Hampton Inn & Suites</a> near Southport.</p>
+            <p>There are a number of beautiful <a href="https://www.tripadvisor.com/Hotels-g49552-c2-Southport_North_Carolina-Hotels.html">boutique hotels</a> and <a href="https://www.airbnb.com/s/Southport--NC--United-States/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_dates%5B%5D=july&flexible_trip_dates%5B%5D=june&flexible_trip_lengths%5B%5D=weekend_trip&date_picker_type=calendar&place_id=ChIJD8gWP_-pAIkR7ypzBj3YZjU&query=Southport%2C%20NC%2C%20United%20States&checkin=2021-08-27&checkout=2021-08-29&adults=2&source=search_blocks_selector_p1_flow&search_type=search_query">AirBnb</a> options in Southport and Oak Island as well.</p>
           </div>
         </div>
       </div>
