--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
             <h2>Ceremony and Reception</h2>
             <div class="row mb-5">
               <div class="col-12">
-                <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail d-none d-md-inline">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a> at <b>4:00 pm</b>.</p>
+                <p><img src="assets/img/greenlands-sm.jpg" class="rounded float-left mr-2 img-thumbnail d-none d-md-inline">Our wedding ceremony and reception will be at <a href="https://greenlandsfarm.org/">Greenlands Farm</a>, beginning at <b>3:00 pm</b>.</p>
                 <address><a href="https://goo.gl/maps/yYgeytaYoXn35Dgk7">668 Midway Road SE<br>Bolivia, NC 28422</a></address>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
                 <ul>
-                  <li><b>The ceremony begins at 4:00pm</b>, and we expect the reception to wind down around 10:00pm.</li>
+                  <li><b>Please plan to be in your seat at 3:00pm</b>, and we expect the reception to wind down around 10:00pm.</li>
                   <li>We kindly request <b>semi-formal dress</b>. While the ceremony will be outdoors on grass, the reception will be indoors; we will offer flip-flops for ladies who wear high heels.</li>
                 </ul>
               </div>
