--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <hr>
 
             <h2>Gift Registry</h2>
-            <p>As we are also trying to purchase and move into our first house together, we are asking for cash contributions toward that purpose. You can make your gift at our <a href="https://www.honeyfund.com/wedding/nicolaisen-ginsberg-08-28-2021">HoneyBook</a>. Thank you so much!</p>
+            <p>As we are also this very summer purchasing and moving into our first house together, we are asking for cash contributions toward that purpose. You can make your gift at our <a href="https://www.honeyfund.com/wedding/nicolaisen-ginsberg-08-28-2021">HoneyBook</a>. We will also be happy to accept your gift in cash or check at the wedding ceremony. Thank you so much!</p>
             <hr>
             <h2>Travel Arrangements</h2>
 
