--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <div class="col-12">
                 <ul>
                   <li><b>Please plan to be in your seat at 3:00pm</b>, and we expect the reception to wind down around 10:00pm.</li>
-                  <li>We kindly request <b>semi-formal dress</b> (ties optional). While the ceremony will be outdoors on grass, the reception will be indoors; we will offer flip-flops for ladies who wear high heels.</li>
+                  <li>We kindly request <b>semi-formal dress</b> (ties optional). While the ceremony will be outdoors on grass, the reception will be indoors; we will offer flip-flops for anyone who wears high heels.</li>
                 </ul>
               </div>
             </div>
