--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
             <p>The closest Marriott-branded hotel is the <a href="https://www.marriott.com/hotels/travel/ilmfs-fairfield-inn-and-suites-southport/">Fairfield Inn</a> in Southport, and the closest Hilton-branded hotel is the <a href="https://www.hilton.com/en/hotels/ilmsphx-hampton-suites-southport/">Hampton Inn & Suites</a> near Southport.</p>
             <p>There are a number of beautiful <a href="https://www.tripadvisor.com/Hotels-g49552-c2-Southport_North_Carolina-Hotels.html">boutique hotels</a> and <a href="https://www.airbnb.com/s/Southport--NC--United-States/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_dates%5B%5D=july&flexible_trip_dates%5B%5D=june&flexible_trip_lengths%5B%5D=weekend_trip&date_picker_type=calendar&place_id=ChIJD8gWP_-pAIkR7ypzBj3YZjU&query=Southport%2C%20NC%2C%20United%20States&checkin=2021-08-27&checkout=2021-08-29&adults=2&source=search_blocks_selector_p1_flow&search_type=search_query">AirBnb</a> options in Southport and Oak Island as well.</p>
           </div>
+          <div class="col-12">
+            <img class="img-fluid" src="./assets/img/too-damn-cute.jpg">
+          </div>
         </div>
       </div>
     </main>
