--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     #hero {
       font-family: 'Allura', cursive;
-      color: #ececec;
+      color: #555;
       width: 100%;
       height: 100vh;
       background: url(./assets/img/cover.jpg) top center no-repeat;
